spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-discovery/src/test/resources/external-name-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-name-service
spec:
  type: ExternalName
  externalName: spring.io
