spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-discovery/src/test/resources/fabric8-discovery-service-no-port-name.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-fabric8-client-discovery
  name: spring-cloud-kubernetes-fabric8-client-discovery
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring-cloud-kubernetes-fabric8-client-discovery
  type: ClusterIP
