spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-discovery/src/test/resources/fabric8-discovery-wiremock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea-wiremock-deployment
spec:
  selector:
    matchLabels:
      app: servicea-wiremock
  template:
    metadata:
      labels:
        app: servicea-wiremock
    spec:
      containers:
        - name: servicea-wiremock
          image: rodolpheche/wiremock:2.27.2
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
          livenessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
          ports:
            - containerPort: 8080
